--- a/.github/workflows/master_mytodo.yml
+++ b/.github/workflows/master_mytodo.yml
@@ -23,14 +23,14 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: https://index.docker.io/v1/
-        username: ${{ secrets.AzureAppService_ContainerUsername_024ae155535049b0b79be167ed962413 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_06d2a55c7e034918bef5a5472e39f05a }}
+        username: ${{ secrets.AzureAppService_ContainerUsername_09f2ea962f624280aaa34e07c33615e3 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_de1123e7d294489ca9347f3f981ffd0b }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_024ae155535049b0b79be167ed962413 }}/a33bc8936b12:${{ github.sha }}
+        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_09f2ea962f624280aaa34e07c33615e3 }}/629708747243.dkr.ecr.us-east-1.amazonaws.com/my-todo-app:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'mytodo'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_8c3427369fba4c71a9fe52c87fc0fac6 }}
-        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_024ae155535049b0b79be167ed962413 }}/a33bc8936b12:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_e7bd5568f32841cc9e82dcff51f70afd }}
+        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_09f2ea962f624280aaa34e07c33615e3 }}/629708747243.dkr.ecr.us-east-1.amazonaws.com/my-todo-app:${{ github.sha }}'
